--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                             <h2>Articles</h2>
                                 <ul>
                                 	
-                                	<li><b><p align="justify"><a href="pdf/Paperfake.pdf"></a>On fake linear cycles inside Fermat varieties</b>. </br>
+                                	<li><b><p align="justify"><a href="pdf/Paperfake.pdf">On fake linear cycles inside Fermat varieties</a>.</b> </br>
                                 	Joint <a href="https://sites.google.com/view/roberto-villaflor-loyola">R. Villaflor</a>.  <a href="https://arxiv.org/abs/2112.14818">ArXiv:2112.14818</a>. </p></li>
 					
 					<li><b><p align="justify"><a href="pdf/Paperhypergeometric.pdf">Periods of Hodge cycles and special values of the Gauss' hypergeometric function</a></b>. </br>
