--- a/index.html
+++ b/index.html
@@ -120,9 +120,11 @@
                         <div class="pad flex-item">
                             <h2>Teaching</h2>
                             <ul>
-                                	<li><b><p align="justify"><a href ="https://drive.google.com/file/d/1dk4rohP01d3Yh_dsNTAiL9fqQvgE1e5n/view?usp=sharing">Multivariable Calculus</a></b>. </br>
-                                	My lecture <a href ="https://drive.google.com/file/d/1RRRWKauVol3S4u-5pbFndJdws_ajkWJk/view?usp=sharing">notes</a> (in Spanish). </br>
-                                	2021-1. Facultad de Ciencias Farmacéuticas y Alimentarias. <a href ="http://www.udea.edu.co"> UdeA </a>.
+        <li><b><p align="justify"><a href ="https://drive.google.com/file/d/1dk4rohP01d3Yh_dsNTAiL9fqQvgE1e5n/view?usp=sharing">Euclidean Geometry</a></b>. </br>
+        B.Sc. course. 2022-1, 2021-2. Facultad de Ingeniería. UdeA.                        	
+				    
+	<li><b><p align="justify"><a href ="https://drive.google.com/file/d/1dk4rohP01d3Yh_dsNTAiL9fqQvgE1e5n/view?usp=sharing">Multivariable Calculus</a></b>. </br>
+        B.Sc course. 2021-1. Facultad de Ciencias Farmacéuticas y Alimentarias. UdeA.
                                 </ul>
                              
                              <h3 class="tm-section-title">Teaching Assitance</h3>
