--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                                 <b><p align="justify">4. Every student deserves to be treated with dignity and respect. </b> </br>
                                 	</p>	
                                 </ul>
-                            <p align="justify"> Here you can find my <a href="pdf/CV">CV</a>.</p>
+                            <p align="justify"> Here you can find my <a href="pdf/CV.pdf">CV</a>.</p>
                         </div>
                         
                         
