--- a/index.html
+++ b/index.html
@@ -161,7 +161,12 @@
                     </div>
                 </section>    
                 </section>
+</div>  
+        <footer class="oculto">
+            "It’s better to burn out than to fade away." Kurt Cobain
+        </footer> 
 
+    </div> 
                           
 
 </section>
