--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
             <div class="tm-sidebar">
                 <nav class="tm-main-nav">
                     <ul>
-                        <li class="tm-nav-item"><a href="#research" class="tm-nav-item-link">Research</a></li>
-                        <li class="tm-nav-item"><a href="#talks" class="tm-nav-item-link">Talks</a></li>
-                        <li class="tm-nav-item"><a href="#teaching" class="tm-nav-item-link">Teaching</a></li>
+                        <li class="tm-nav-item"><a href="#research" style="color:#85C1E9;" class="tm-nav-item-link">Research</a></li>
+                        <li class="tm-nav-item"><a href="#talks" style="color:#85C1E9;" class="tm-nav-item-link">Talks</a></li>
+                        <li class="tm-nav-item"><a href="#teaching" style="color:#85C1E9;" class="tm-nav-item-link">Teaching</a></li>
                     </ul>
                 </nav>
             </div>
