--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                                 <ul>
                                 	
                                 	<li><b><p align="justify"><a href="pdf/Paperfake.pdf" target="_blank" rel="noopener noreferrer" style="color:#85C1E9;">On fake linear cycles inside Fermat varieties</a>.</b> </br>
-                                	Joint <a href="https://sites.google.com/view/roberto-villaflor-loyola" target="_blank" rel="noopener noreferrer" style="color:#85C1E9;">R. Villaflor</a>.  <a href="https://arxiv.org/abs/2112.14818" target="_blank" rel="noopener noreferrer" style="color:#85C1E9;">ArXiv:2112.14818</a>. To appear in <a href="https://msp.org/ant/about/journal/about.html" target="_blank" rel="noopener noreferrer" style="color:#85C1E9;">Algebra & Number theory</a>.</p></li>
+                                	Joint <a href="https://sites.google.com/view/roberto-villaflor-loyola" target="_blank" rel="noopener noreferrer" style="color:#85C1E9;">R. Villaflor</a>.  <a href="https://arxiv.org/abs/2112.14818" target="_blank" rel="noopener noreferrer" style="color:#85C1E9;">ArXiv:2112.14818</a>. To appear in <a href="https://msp.org/soon/coming.php?jpath=ant" target="_blank" rel="noopener noreferrer" style="color:#85C1E9;">Algebra & Number theory</a>.</p></li>
 							
 			
 					<li><b><p align="justify"><a href="pdf/Paperhypergeometric.pdf" target="_blank" rel="noopener noreferrer" style="color:#85C1E9;">Periods of Hodge cycles and special values of the Gauss' hypergeometric function</a></b>. </br>
