--- a/index.html
+++ b/index.html
@@ -126,6 +126,10 @@
                         <div class="pad flex-item">
                             <h2>Teaching</h2>
         	<ul>
+			
+	<li><b><p align="justify"><a href ="https://docs.google.com/document/d/1DNDy0nCk0mgqEfT9zVLZkEKlByaDOn1k/edit?usp=sharing&ouid=105348715449418908175&rtpof=true&sd=true" target="_blank" rel="noopener noreferrer" style="color:#85C1E9;">Hodge Theory</a></b>. </br>
+        Ph.D. and M.Sc. course. 2023-1. Departamento de Matemáticas, Facultad de Ciencias, Universidad de .Chile
+			
 	<li><b><p align="justify"><a href ="https://drive.google.com/file/d/1AXcbd0bjtMruu9hxlWDjHByQQBlhnDdl/view?usp=sharing" target="_blank" rel="noopener noreferrer" style="color:#85C1E9;">A look at the Hodge conjecture and related problems</a></b>. </br>
         Ph.D. and M.Sc. mini-course. 2022-1. Instituto de Matemáticas. UdeA.
 			
