--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
                     <li><img class="centro" src="img/georgy.jpg" alt=""></li>
                     <li><img class="centro" src="img/georgy123.jpg" alt=""></li>
                     <li><img class="centro" src="img/georgy1.jpg" alt=""></li>
-                    <li><img class="centro" src="img/georgy2.jpg" alt=""></li>
+                    <li><img class="centro" src="img/Mobius.jpg" alt=""></li>
                 </ul>
                 
             </div>
