--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
 		    <li><img class="centro" src="img/torta.jpg" alt=""></li>
                     <li><img class="centro" src="img/georgy.jpg" alt=""></li>
                     <li><img class="centro" src="img/georgy123.jpg" alt=""></li>
-                    <li><img class="centro" src="img/georgy1.jpg" alt=""></li>
+                    <li><img class="centro" src="img/work.jpg" alt=""></li>
                     <li><img class="centro" src="img/Mobius.jpg" alt=""></li>
                 </ul>
                 
