--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                             <ul>
 			<li><p align="justify"><b><a href="https://www.youtube.com/watch?v=3q8l3fw7DJA" target="_blank" rel="noopener noreferrer" style="color:#85C1E9;">Components of Hodge loci of minimal codimension</a></b>.</br> 
 			<a href="https://impa.br/eventos-do-impa/2023-2/gadeps-focused-conference-iii-noether-lefschetz-and-hodge-loci/" target="_blank" rel="noopener noreferrer" style="color:#85C1E9;">GADEPs focused conference III: Noether-Lefschetz and Hodge loci</a>.</br>
-			21/08/2023. IMPA. <a href="https://drive.google.com/file/d/1Qz1jDy0t7G9DpCjc06b5GF96uaC_Ohxt/view?usp=sharing">Slides</a>.</p></li>
+			21/08/2023. IMPA. <a href="https://drive.google.com/file/d/1Qz1jDy0t7G9DpCjc06b5GF96uaC_Ohxt/view?usp=sharing" target="_blank" rel="noopener noreferrer" style="color:#85C1E9;">Slides</a>.</p></li>
 				    
 			<li><p align="justify"><b><a href="https://youtu.be/P2QGoiFoQOg" target="_blank" rel="noopener noreferrer" style="color:#85C1E9;">Hodge locus</a> (In Portuguese)</b>.</br> 
 			<a href="https://sites.google.com/view/seminario-ga-alunos-impa" target="_blank" rel="noopener noreferrer" style="color:#85C1E9;">Student Algebraic Geometry and Foliations Seminar at IMPA</a>.</br>
