--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                     <div class="tm-banner-inner">
                         <h1 class="animate__animated animate__backInDown" style = "font-family:georgia,serif;font-size:50px;">Jorge Duque</h1>
                         <!-- h2 class="tm-banner-text">Ph.D. student @ <a href="https://impa.br/en_US/">IMPA</a></h2>-->
-                        <h2 class="tm-banner-text">jorge.duque [at] udea [dot] edu [dot] co</h2> 
+                        <h2 class="tm-banner-text">jorge.duque [at] algebraicgeometry [dot] cl</h2> 
                         
                     </div>                    
                 </section>
