--- a/index.html
+++ b/index.html
@@ -197,7 +197,8 @@
             <div class="slider">
                 <ul>
 		    <li><img class="centro" src="img/torta.jpg" alt=""></li>
-                    <li><img class="centro" src="img/georgy.jpg" alt=""></li>
+                    <li><img class="centro" src="img/Georgy3.jpg" alt=""></li>
+		    <li><img class="centro" src="img/georgy.jpg" alt=""></li>
                     <li><img class="centro" src="img/georgy123.jpg" alt=""></li>
                     <li><img class="centro" src="img/work.jpg" alt=""></li>
                     <li><img class="centro" src="img/Mobius.jpg" alt=""></li>
