--- a/index.html
+++ b/index.html
@@ -76,7 +76,10 @@
                         <div class="pad flex-item">
                             <h2>Articles</h2>
                                 <ul>
-                                	<li><b><p align="justify"><a href="pdf/PaperPicard.pdf" target="_blank" rel="noopener noreferrer" style="color:#85C1E9;">On the Picard number and the extension degree of period matrices of complex tori</a>. Joint <a href="https://sites.google.com/uchile.cl/rfauffar" target="_blank" rel="noopener noreferrer" style="color:#85C1E9;">R. Auffarth</a>.</b> </br>
+                                	<li><b><p align="justify"><a href="pdf/Paperlaplacian.pdf" target="_blank" rel="noopener noreferrer" style="color:#85C1E9;">Hodge Laplacians and Hodge Diffusion Maps</a>. Joint <a href="https://alvaroalmeidagomez.github.io/" target="_blank" rel="noopener noreferrer" style="color:#85C1E9;">A. Almeida</a>.</b> </br>
+                                	<a href="https://arxiv.org/abs/2503.21642" target="_blank" rel="noopener noreferrer" style="color:#85C1E9;"> arXiv:1004.XXXX </a>. Preprint. 2025</p></li>
+					
+					<li><b><p align="justify"><a href="pdf/PaperPicard.pdf" target="_blank" rel="noopener noreferrer" style="color:#85C1E9;">On the Picard number and the extension degree of period matrices of complex tori</a>. Joint <a href="https://sites.google.com/uchile.cl/rfauffar" target="_blank" rel="noopener noreferrer" style="color:#85C1E9;">R. Auffarth</a>.</b> </br>
                                 	<a href="https://arxiv.org/abs/2503.21642" target="_blank" rel="noopener noreferrer" style="color:#85C1E9;"> arXiv:2503.21642 </a>. Preprint. 2025</p></li>
 					
 					<li><b><p align="justify"><a href="pdf/Paperjoin.pdf" target="_blank" rel="noopener noreferrer" style="color:#85C1E9;">Periods of join algebraic cycles</a>. Joint <a href="https://sites.google.com/view/roberto-villaflor-loyola" target="_blank" rel="noopener noreferrer" style="color:#85C1E9;">R. Villaflor</a>.</b> </br>
