--- a/index.html
+++ b/index.html
@@ -37,7 +37,8 @@
                     <div class="tm-banner-inner">
                         <h1 class="animate__animated animate__backInDown" style = "font-family:georgia,serif;font-size:50px;">Jorge Duque</h1>
                         <!-- h2 class="tm-banner-text">Ph.D. student @ <a href="https://impa.br/en_US/">IMPA</a></h2>-->
-                        <h2 class="tm-banner-text">jorge.duque [at] algebraicgeometry [dot] cl</h2> 
+                        <h2 class="tm-banner-text">jorge.duque [at] udea [dot] edu [dot] co </h2>
+			<h2 class="tm-banner-text">jorge.duque [at] algebraicgeometry [dot] cl</h2> 
                         
                     </div>                    
                 </section>
@@ -77,7 +78,7 @@
                             <h2>Articles</h2>
                                 <ul>
                                 	<li><b><p align="justify"><a href="pdf/Paperlaplacian.pdf" target="_blank" rel="noopener noreferrer" style="color:#85C1E9;">Hodge Laplacians and Hodge Diffusion Maps</a>. Joint <a href="https://alvaroalmeidagomez.github.io/" target="_blank" rel="noopener noreferrer" style="color:#85C1E9;">A. Almeida</a>.</b> </br>
-                                	<a href="https://arxiv.org/abs/2503.21642" target="_blank" rel="noopener noreferrer" style="color:#85C1E9;"> arXiv:1004.XXXX </a>. Preprint. 2025</p></li>
+                                	<a href="https://arxiv.org/abs/2504.07910" target="_blank" rel="noopener noreferrer" style="color:#85C1E9;"> arXiv:2504.07910 </a>. Preprint. 2025</p></li>
 					
 					<li><b><p align="justify"><a href="pdf/PaperPicard.pdf" target="_blank" rel="noopener noreferrer" style="color:#85C1E9;">On the Picard number and the extension degree of period matrices of complex tori</a>. Joint <a href="https://sites.google.com/uchile.cl/rfauffar" target="_blank" rel="noopener noreferrer" style="color:#85C1E9;">R. Auffarth</a>.</b> </br>
                                 	<a href="https://arxiv.org/abs/2503.21642" target="_blank" rel="noopener noreferrer" style="color:#85C1E9;"> arXiv:2503.21642 </a>. Preprint. 2025</p></li>
