--- a/index.html
+++ b/index.html
@@ -138,6 +138,9 @@
                         <div class="pad flex-item">
                             <h2>Teaching</h2>
         	<ul>
+	<li><b><p align="justify"><a href ="https://drive.google.com/file/d/1l6t2uUqsLk1IqgZVe9Md7Hht22BY5lNk/view" target="_blank" rel="noopener noreferrer" style="color:#85C1E9;">Hodge Theory</a></b>. </br>
+        Ph.D. course. 2025-2. Instituto de Matemáticas, Universidad de Talca.
+			
 	<li><b><p align="justify"><a href ="https://drive.google.com/file/d/1OOUnplefrEJRm6w1nuQJ-lUw5JF11Ge-/view?usp=sharing" target="_blank" rel="noopener noreferrer" style="color:#85C1E9;">Multivariable Calculus</a></b>. </br>
         B.Sc course. 2024-1. Departamento de Matemáticas, Facultad de Ciencias, Universidad de Chile.		
 	
