--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                     <div class="tm-banner-inner">
                         <h1 class="animate__animated animate__backInDown" style = "font-family:georgia,serif;font-size:50px;">Jorge Duque</h1>
                         <!-- h2 class="tm-banner-text">Ph.D. student @ <a href="https://impa.br/en_US/">IMPA</a></h2>-->
-                        <h2 class="tm-banner-text">jorge.duque [at] udea [dot] edu [dot] co </h2>
+                        <h2 class="tm-banner-text">jorge.duque [at] utalca [dot]  cl </h2>
 			<!--h2 class="tm-banner-text">jorge.duque [at] algebraicgeometry [dot] cl</h2--> 
                         
                     </div>                    
@@ -222,6 +222,7 @@
     </body>
     
     </html>
+
 
 
 
