--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                             <h2>Articles</h2>
                                 <ul>
                                 	<li><b><p align="justify"><a href="pdf/PaperPicard.pdf" target="_blank" rel="noopener noreferrer" style="color:#85C1E9;">On the Picard number and the extension degree of period matrices of complex tori</a>. Joint <a href="https://sites.google.com/uchile.cl/rfauffar" target="_blank" rel="noopener noreferrer" style="color:#85C1E9;">R. Auffarth</a>.</b> </br>
-                                	<a href="https://kwnsfk27.r.eu-west-1.awstrack.me/L0/https:%2F%2Fauthors.elsevier.com%2Fa%2F1lr9U562Dc99v/1/01020199891e4c06-d25e8c7d-f490-456c-9d44-df204ef5d313-000000/s3X-VvYb4dCsJHEro1gi-I2PdsY=445" target="_blank" rel="noopener noreferrer" style="color:#85C1E9;"> Journal of Pure and Applied Algebra </a>. Vol. 229. 2025. </p></li>
+                                	<a href="https://www.sciencedirect.com/science/article/abs/pii/S0022404925002361" target="_blank" rel="noopener noreferrer" style="color:#85C1E9;"> Journal of Pure and Applied Algebra </a>. Vol. 229. 2025. </p></li>
 									
 									<li><b><p align="justify"><a href="pdf/Paperlaplacian.pdf" target="_blank" rel="noopener noreferrer" style="color:#85C1E9;">Hodge Laplacians and Hodge Diffusion Maps</a>. Joint <a href="https://alvaroalmeidagomez.github.io/" target="_blank" rel="noopener noreferrer" style="color:#85C1E9;">A. Almeida</a>.</b> </br>
                                 	<a href="https://arxiv.org/abs/2504.07910" target="_blank" rel="noopener noreferrer" style="color:#85C1E9;"> arXiv:2504.07910 </a>. Preprint. 2025.</p></li>
@@ -222,6 +222,7 @@
     </body>
     
     </html>
+
 
 
 
